--- a/media.css
+++ b/media.css
@@ -106,7 +106,7 @@
     }
 
     .image__emoji {
-        width: 90%;
+        width: 85%;
         margin-top: 0.5rem;
     }
 
@@ -128,18 +128,22 @@
     .bento {
         grid-template-columns: repeat(3, 16rem);
         grid-template-rows: 20.15rem 3.75rem 9.7rem 15.35rem auto;
-        grid-column-gap: 2rem;
     }
 
     .bento__item--4 {
         grid-column: 3;
         grid-row: 1 / 4;
         padding: 2rem;
-        padding: 2rem 0 2rem 2rem;
+        padding: 3rem 0 2rem 2rem;
     }
 
     .bento__item--4 h2 {
         text-align: left;
+    }
+
+    .bento__item--4 p {
+        text-align: left;
+        padding-right: 1.5rem;
     }
 
     .bento__item--5 {
@@ -153,8 +157,8 @@
     }
 
     .image__schedule {
-        height: 60%;
-        width: 100%;
+        width: 162%;
+        margin-right: -63%;
     }
 
     .image__schedule img {
@@ -164,5 +168,57 @@
 
     .image__post {
         width: 50%;
+    }
+}
+
+@media (min-width: 71rem) {
+    .bento {
+        grid-template-columns: repeat(4, 16rem);
+        grid-template-rows: 20.15rem 3.75rem 9.7rem 15.35rem;
+        margin: 0;
+    }
+
+    .bento__item--1 {
+        grid-column: 2 / 4;
+        grid-row: 1;
+    }
+
+    .bento__item--2 {
+        grid-column: 2;
+    }
+
+    .bento__item--3 {
+        grid-column: 3;
+    }
+
+    .bento__item--4 {
+        grid-column: 4;
+    }
+
+    .bento__item--5 {
+        grid-column: 3 / 5;
+    }
+
+    .bento__item--6 {
+        grid-column: 2;
+        grid-row: 4;
+    }
+
+    .bento__item--7 {
+        grid-column: 1;
+        grid-row: 1 / 3;
+    }
+
+    .bento__item--8 {
+        grid-column: 1;
+        grid-row: 3 / 5;
+    }
+
+    .image__emoji {
+        margin-top: 1.25rem;
+    }
+
+    .image__post {
+        width: 100%;
     }
 }
